--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^1.1.2
   animations: ^2.0.11
   flutter_animator: ^3.2.2
+  http: ^1.2.2
+  get:
 
 dev_dependencies:
   flutter_test:
